# emoji-picker

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
emoji-picker-hooker/: Cargo.toml  README.md  build.rs
emoji-picker-hooker/src/: lib.rs  volatile.rs
key-hooker/: emoji-key-hooker.c
src/: backend_link.rs  caret_locator.rs  emoji.rs  emoji_model.rs  handler.rs  handlers.rs  key_redir.rs  keyhandler.rs  keyredir.rs  main.rs  no_activate.rs  poller.rs  to_hwnd.rs
src/backend_link/: backend_iced.rs
src/handlers/: back_click.rs  caret_locator.rs  close_shortcut.rs  emoji_selected.rs  key_redir.rs  key_shortcut.rs  mod.rs  no_activate.rs  on_close_slint.rs  on_open_slint.rs  outside_click.rs  tray_icon.rs  utils.rs
ui/: appwindow.slint  emoji-group.slint  emoji-model.slint  emoji-picker.slint
