[package]
name = "emoji-picker"
version = "0.1.0"
edition = "2021"
description = "Replaces the default Windows "
authors = ["Maeeen <marwanazuz@gmail.com>"]
build = "build.rs"
repository = "https://github.com/Maeeen/emoji-picker"

[dependencies]
emojis = "0.6.3"
slint = { version = "1.7.2", features = ["raw-window-handle-06"] }
thiserror = "1.0.63"


[build-dependencies]
slint-build = "1.6"

[features]
default = ["caret", "no-activate", "key-shortcut", "key-redir"]
caret = []
no-activate = []
key-shortcut = []
key-redir = ["dep:emoji-picker-hooker"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_Graphics_Gdi", "Win32_UI_Accessibility", "Win32_System_Com"
]}
raw-window-handle = "0.6.2"
emoji-picker-hooker = { path = "./emoji-picker-hooker", optional = true }
