[package]
name = "emoji-picker"
version = "0.1.0"
edition = "2021"
description = "Replaces the default Windows emoji picker with a custom one."
authors = ["Maeeen <marwanazuz@gmail.com>"]
build = "build.rs"
repository = "https://github.com/Maeeen/emoji-picker"

[features]
default = ["caret", "no-activate", "key-shortcut", "key-redir", "tray-icon", "back-click"]
caret = []
no-activate = []
key-shortcut = []
key-redir = ["dep:emoji-picker-hooker"]
tray-icon = ["dep:tray-item"]
back-click = []

[dependencies]
emojis = "0.6.3"
iced = "0.12.1"
thiserror = "1.0.63"
tray-item = { version = "0.10.0", optional = true }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint.git", "rev" = "6472ab841612c05f0996bfd277e157085b7fcbff" }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_Graphics_Gdi", "Win32_UI_Accessibility", "Win32_System_Com"
]}
raw-window-handle = "0.6.2"
emoji-picker-hooker = { path = "./emoji-picker-hooker", optional = true }
