[package]
name = "emoji-picker-hooker"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Todo pass here later and remove useless features
windows-sys = { version = "0.59.0", features = [
    "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"
]}

[build-dependencies]
rustc_version = "0.4.1"